force-app/main/default/objects/PDRI__Connection__c/PDRI__Connection__c.object-meta.xml
<CustomObject>
    <label>Connection</label>
    <nameField>
        <label>Connection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>