force-app/main/default/objects/PDRI__Connection__c/fields/PDRI__Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Client_Secret__c</fullName>
    <label>Client Secret</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>