force-app/main/default/objects/PDRI__Connection__c/fields/PDRI__Connection_Type__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Connection_Type__c</fullName>
    <label>Connection Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Refresh</fullName>
                <default>true</default>
                <label>Refresh</label>
            </value>
            <value>
                <fullName>JWT</fullName>
            </value>
            <value>
                <fullName>Personal_Access_Token</fullName>
                <label>Personal Access Token</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>