force-app/main/default/objects/PDRI__Connection__c/fields/PDRI__Do_Not_Allow_Destination__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Do_Not_Allow_Destination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Allow As Destination</label>
    <type>Checkbox</type>
</CustomField>