force-app/main/default/objects/PDRI__Connection__c/fields/PDRI__Local_Connection__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Local_Connection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Control Org</label>
    <type>Checkbox</type>
</CustomField>