force-app/main/default/objects/PDRI__Connection__c/fields/PDRI__Org_Type__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Org_Type__c</fullName>
    <label>Org Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Sandbox</fullName>
            </value>
            <value>
                <fullName>Scratch Org</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>