force-app/main/default/objects/PDRI__Connection__c/fields/PDRI__Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Refresh_Token__c</fullName>
    <label>Refresh Token</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>