force-app/main/default/objects/PDRI__Connection__c/fields/PDRI__Refresh_Token_Long__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Refresh_Token_Long__c</fullName>
    <label>Refresh Token Long</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>