force-app/main/default/objects/PDRI__Connection__c/fields/PDRI__Target__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Target__c</fullName>
    <label>Target</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
                <default>true</default>
                <label>Salesforce</label>
            </value>
            <value>
                <fullName>ServiceNow</fullName>
            </value>
            <value>
                <fullName>VCS</fullName>
            </value>
            <value>
                <fullName>Jira</fullName>
            </value>
            <value>
                <fullName>AzureDevOps</fullName>
            </value>
            <value>
                <fullName>AgileAccelerator</fullName>
            </value>
            <value>
                <fullName>GithubIssues</fullName>
            </value>
            <value>
                <fullName>Asana</fullName>
            </value>
            <value>
                <fullName>ClickUp</fullName>
            </value>
            <value>
                <fullName>SalesforceWorkItem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>