force-app/main/default/objects/PDRI__Connection__c/fields/PDRI__VCS_Repo__c.field-meta.xml
<CustomField>
    <fullName>PDRI__VCS_Repo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VCS Repo</label>
    <referenceTo>PDRI__VCS_Repo__c</referenceTo>
    <relationshipName>Connection_Repos</relationshipName>
    <type>Lookup</type>
</CustomField>